Add document keywords

--- a/data/me.yml
+++ b/data/me.yml
@@ -3,3 +3,18 @@
 # SPDX-FileCopyrightText: 2023 Tristan Partin <tristan@partin.io>
 
 name: Tristan Partin
+keywords:
+  - "build systems"
+  - "c"
+  - "c++"
+  - "eagle scout"
+  - "databases"
+  - "engineer"
+  - "go"
+  - "java"
+  - "linux"
+  - "open-source"
+  - "postgres"
+  - "python"
+  - "storage"
+  - "systems software"
