Fix typo in skills

--- a/data/skills.yml
+++ b/data/skills.yml
@@ -9,7 +9,7 @@
 - name: Java
 - name: Linux
 - name: Git
-- name: Build Sytems
+- name: Build Systems
 - name: Databases
 - name: Storage Engines
 - name: Systems Software
