--- a/data/awards.yml
+++ b/data/awards.yml
@@ -2,13 +2,26 @@
 #
 # SPDX-FileCopyrightText: 2023 Tristan Partin <tristan@partin.io>
 
+- name: Techniques to Balance LSMs
+  type: patent
+  organization:
+    name: USPTO
+    url: https://www.uspto.gov/
+  patent:
+    number: "12088497"
+    url: https://patents.google.com/patent/US12088497B2
+  year: 2024
+
 - name: Apache Cassandra 3.x Developer Associate
+  hidden: true
+  type: award
   organization:
     name: DataStax
     url: https://www.datastax.com/
   year: 2020
 
 - name: Eagle Scout Award
+  type: award
   organization:
     name: Boy Scouts of America
     url: https://www.scouting.org/
