--- a/REUSE.toml
+++ b/REUSE.toml
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: CC0-1.0
 #
-# SPDX-FileCopyrightText: 2024 Tristan Partin <tristan@partin.io>
+# SPDX-FileCopyrightText: Tristan Partin <tristan@partin.io>
 
 version = 1
 SPDX-HomePage = "https://git.sr.ht/~tristan957/resume"
