Update title at Neon

--- a/data/experience.yml
+++ b/data/experience.yml
@@ -2,7 +2,7 @@
 #
 # SPDX-FileCopyrightText: 2023 Tristan Partin <tristan@partin.io>
 
-- title: Software Engineer (Postgres Hacker)
+- title: Software Engineer
   company:
     name: Neon
     url: https://neon.tech
